--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/content/language/import/.content.xml
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/content/language/import/.content.xml
@@ -5,7 +5,7 @@
         xmlns:granite="http://www.adobe.com/jcr/granite/1.0"
         jcr:primaryType="nt:unstructured"
         sling:resourceType="granite/ui/components/coral/foundation/dialog"
-        jcr:title="Import labels"
+        jcr:title="Import Dictionary"
         granite:class="coral3-Dialog--detailView">
     <items jcr:primaryType="nt:unstructured">
         <properties
