solves #33: Update terminology to use message entry and key instead of label

--- a/ui.apps/src/main/content/jcr_root/apps/cq/core/content/nav/tools/translation/.content.xml
+++ b/ui.apps/src/main/content/jcr_root/apps/cq/core/content/nav/tools/translation/.content.xml
@@ -7,7 +7,7 @@
     <dictionary-translator
             jcr:primaryType="nt:unstructured"
             jcr:title="Dictionaries"
-            jcr:description="Translate labels for i18n internationalisation"
+            jcr:description="Translate dictionaries for i18n internationalisation"
             icon="book"
             href="/tools/translation/dictionaries.html"
             id="translation"/>
