Use the same language data source as in Page Properties -> Advanced
Consolidate all language data sources into one with parameters

This closes #55

--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/content/granite/dialog/dictionary/language/create/.content.xml
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/content/granite/dialog/dictionary/language/create/.content.xml
@@ -24,7 +24,7 @@
                                         jcr:primaryType="nt:unstructured"
                                         sling:resourceType="aem-dictionary-translator/servlet/action/create-language"
                                         granite:id="create-language-form"
-                                        action="${requestPathInfo.resourcePath}?dictionary=${param.dictionary}"
+                                        action="${requestPathInfo.resourcePath}?dictionary=${requestPathInfo.suffix}"
                                         foundationForm="true"
                                         method="post"
                                         style="vertical">
