--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/content/granite/dialog/dictionary/language/delete/.content.xml
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/content/granite/dialog/dictionary/language/delete/.content.xml
@@ -40,7 +40,8 @@
                                                 fieldLabel="Language Code">
                                             <datasource
                                                     jcr:primaryType="nt:unstructured"
-                                                    sling:resourceType="aem-dictionary-translator/datasource/language"/>
+                                                    sling:resourceType="aem-dictionary-translator/datasource/dictionary-language"
+                                                    hideNonDictionaryLanguages="{Boolean}true" />
                                         </languages>
                                     </items>
                                 </form>
