--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/content/granite/dialog/dictionary/language/create/.content.xml
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/content/granite/dialog/dictionary/language/create/.content.xml
@@ -6,7 +6,7 @@
         xmlns:granite="http://www.adobe.com/jcr/granite/1.0"
         jcr:primaryType="nt:unstructured"
         sling:resourceType="granite/ui/components/coral/foundation/dialog"
-        jcr:title="Create Language">
+        jcr:title="Add language to dictionary">
     <items jcr:primaryType="nt:unstructured">
         <properties
                 jcr:primaryType="nt:unstructured"
@@ -64,7 +64,7 @@
                 sling:resourceType="granite/ui/components/coral/foundation/button"
                 granite:class="foundation-validation-bind"
                 disabled="{Boolean}true"
-                text="Create"
+                text="Add"
                 type="submit"
                 variant="primary"
                 formId="create-language-form"/>
