--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/content/granite/dialog/dictionary/language/delete/.content.xml
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/content/granite/dialog/dictionary/language/delete/.content.xml
@@ -5,7 +5,8 @@
         xmlns:granite="http://www.adobe.com/jcr/granite/1.0"
         jcr:primaryType="nt:unstructured"
         sling:resourceType="granite/ui/components/coral/foundation/dialog"
-        jcr:title="Delete Language">
+        variant="error"
+        jcr:title="Remove language from dictionary">
     <items jcr:primaryType="nt:unstructured">
         <properties
                 jcr:primaryType="nt:unstructured"
@@ -67,7 +68,7 @@
                 granite:class="foundation-validation-bind"
                 text="Delete"
                 type="submit"
-                variant="primary"
+                variant="warning"
                 formId="delete-language-form"/>
     </footer>
 </jcr:root>
