--- a/it.content/src/main/content/jcr_root/content/dictionaries/fruit/i18n/nl_be.xml
+++ b/it.content/src/main/content/jcr_root/content/dictionaries/fruit/i18n/nl_be.xml
@@ -6,7 +6,7 @@
           jcr:primaryType="sling:Folder"
           sling:basename="/content/dictionaries/fruit/i18n"
           sling:resourceType="sling:Folder">
-    <apple jcr:primaryType="sling:MessageEntry" sling:key="apple" sling:message="Appel"/>
+    <apple jcr:primaryType="nt:folder" jcr:mixinTypes="[sling:Message]" sling:key="apple" sling:message="Appel"/>
     <banana jcr:primaryType="sling:MessageEntry" sling:key="banana" sling:message="Banaan"/>
     <cherry jcr:primaryType="sling:MessageEntry" sling:key="cherry" sling:message="Kers"/>
     <date jcr:primaryType="sling:MessageEntry" sling:key="date" sling:message="Dadel"/>
